# flask_image_search

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  flask_image_search.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: action-ci-cd.yml
docs/: Makefile  conf.py  flask_image_search.feature_extractor.rst  flask_image_search.feature_extractor_debug.rst  flask_image_search.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/_templates/: header.html  navigation.html
examples/: example_app.py  example_search.py  test.db
examples/static/: image
flask_image_search/: __about__.py  __init__.py  feature_extractor.py  feature_extractor_debug.py
resources/: README.txt  test.db
resources/image_search/: image.npz
resources/image_search_tests/: image.npz
tests/: __init__.py  conftest.py  test.db  test_flask_image_search.py
tests/image_search/: image.npz
tests/image_search/default/image_features/: 0.0  1.0
tests/image_search/default/image_features/1287/: 0
tests/image_search/default/image_features/1289/: 0
tests/image_search/default/image_features/1292/: 0
tests/image_search/default/image_features/1296/: 0
tests/image_search/default/image_features/1300/: 0
tests/image_search/default/image_features/1301/: 0
tests/image_search/default/image_features/1303/: 0
tests/image_search/inception_v3/image_features/: .zarray  0.0  1.0
tests/image_search/vgg16/image_features/: 0.0  1.0
tests/image_search/vgg19/image_features/: .zarray  0.0  1.0
tests/image_search_inception_v3/: image.npz
tests/image_search_vgg16/: image.npz
tests/image_search_vgg19/: image.npz
(+967 files in other folders)
