[metadata]
name = Flask-Image-Search
version = attr: flask_image_search.__about__.__version__
url = https://flask-image-search.readthedocs.io
project_url =
    Documentation = https://flask-image-search.readthedocs.io
    Source Code = https://github.com/hananf11/flask_image_search
    Issue Tracker = https://github.com/hananf11/flask_image_search/issues
    Say Thanks! = http://saythanks.io/to/example
license = MIT license
license_files = LICENSE
author = Hanan Fokkens
author_email = hananfokkens@gmail.com
description = Image Searching For Flask and Flask-SQLAlchemy.
long_description = file: README.rst, HISTORY.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
packages = find:
python_requires = >= 3.6
include_pacakge_data = False
install_requires =
    Keras == 2.3.1
    flask >= 1.0.4
    Flask-SQLAlchemy >= 2.5.0
    pillow >= 8.2.0
    tensorflow <= 2.3.4, >= 2.0.0
    zarr >= 2.8.1
setup_requires =
    setuptools_scm

[options.packages.find]
include = flask_image_search

[options.extras_require]
docs = pallets_sphinx_themes
dev =
    flake8
    coverage
    sphinx
    twine
    pytest
    pallets_sphinx_themes


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = docs
inline-quotes = double
